refs #8, 管理介面版型階層設計 * Javascript 路徑變更 * 靜態檔案處理 * 開啟所有除錯功能 * 版型階層設計

--- a/views/admin/admin_base.html
+++ b/views/admin/admin_base.html
@@ -1,1 +1,22 @@
 {% extends "layout/base.html" %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="/css/admin.css" />
+{% endblock %}
+
+{% block body %}
+<div id="admin_page">
+	<div id="navibar">
+		<div id="menu">
+
+		</div>
+		<div id="account">
+			管理員: 小璋丸
+			登出
+		</div>
+	</div>
+	<div id="panel">
+		{% block panel %}{% endblock %}
+	</div>
+</div>
+{% endblock %}
