--- a/views/admin/info.html
+++ b/views/admin/info.html
@@ -1,3 +1,7 @@
 {% extends "admin/admin_base.html" %}
+
 {% block title %}系統資訊{% endblock %}
-這是 info.html {{ name }}
+
+{% block panel %}
+這是 info.html
+{% endblock %}
