refs #8, 構思文件管理的相關欄位

--- a/views/admin/admin_base.html
+++ b/views/admin/admin_base.html
@@ -9,12 +9,10 @@
 	<div id="navibar">
 		<h1>環評公民版 - 管理工具</h1>
 		<div id="menu">
-			<div>選單 1</div>
-			<div>選單 2</div>
-			<div>選單 3</div>
+			<div>書件</div>
 		</div>
 		<div id="account">
-			<div>管理員: 小璋丸</div>
+			<div>管理員：小璋丸</div>
 			<div>登出</div>
 		</div>
 		<div class="clear"></div>
