refs #8, 增加 input 欄位, 啟動程式可切換管理工具開關

--- a/views/admin/doc_detail.html
+++ b/views/admin/doc_detail.html
@@ -7,11 +7,36 @@
 <hr/>
 
 <p>案號：<input type="text" name="" values="" /></p>
+<p>開發單位：<input type="text" name="" values="" /></p>
+<p>目的：<input type="text" name="" values="" /></p>
+<p>約略位置：
+	(<input type="text" name="" values="" />,
+	<input type="text" name="" values="" />)
+</p>
+<p>影響：
+	空氣
+	噪音
+	振動
+	水質
+	交通
+	生態
+	土壤
+</p>
+
+
 <p>環評機關：<input type="text" name="" values="" /></p>
 <p>名稱：<input type="text" name="" values="" /></p>
 <p>類別：<input type="text" name="" values="" /></p>
 <p>承辦人：<input type="text" name="" values="" /></p>
 <p>審查進度：<input type="text" name="" values="" /></p>
 <p>說明：<input type="text" name="" values="" /></p>
+<p>全文圖檔：</p>
+<p>頁數：</p>
+
+<p>監測報告：</p>
+<p>監測單位：</p>
+<p>關係廠商</p>
+<p>上游廠商：</p>
+<p>下游廠商：</p>
 
 {% endblock %}
