--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,4 @@
-div, p, h1, h2, h3, h4, h5, h6 {
-	padding: 0;
-	margin: 0;
-}
 
-div.class { clear: both; }
+div.clear { clear: both; }
+
+div, p, h1, h2, h3, h4, h5, h6 { padding: 0; margin: 0; }
