--- a/views/admin/admin_base.html
+++ b/views/admin/admin_base.html
@@ -9,7 +9,7 @@
 	<div id="navibar">
 		<h1>環評公民版 - 管理工具</h1>
 		<div id="menu">
-			<div>書件</div>
+			<div>環評書件</div>
 		</div>
 		<div id="account">
 			<!--
