--- a/views/admin/doc_detail.html
+++ b/views/admin/doc_detail.html
@@ -1,5 +1,30 @@
 {% extends "admin/admin_base.html" %}
+
 {% block title %}書件細節{% endblock %}
+
+{% block head %}
+{{ super() }}
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+var map;
+
+$(document).ready(function() {
+	var mapOptions = {
+		center: new google.maps.LatLng({{lat}}, {{lng}}),
+		zoom: 16,
+		mapTypeId: google.maps.MapTypeId.ROADMAP
+	};
+	map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+	google.maps.event.addListener(map, "center_changed", updatePosition);
+});
+
+function updatePosition() {
+	var pos = map.getCenter();
+	$("input[name=lat]").val(pos.lat().toFixed(5));
+	$("input[name=lng]").val(pos.lng().toFixed(5));
+}
+</script>
+{% endblock %}
 
 {% block panel %}
 <div id="function_stack">
@@ -17,9 +42,10 @@
 		<h4>開發單位</h4>
 		<div><input type="text" name="" value="{{developer}}" class="L" /></div>
 		<h4>座標</h4>
-		<div>
-			<input type="text" name="" value="{{lat}}" class="S" />，
-			<input type="text" name="" value="{{lng}}" class="S" />
+		<div style="border: 1px solid #777; border-radius: 8px;">
+			<input type="text" name="lat" value="{{lat}}" class="S" style="text-align:right; border:0px;" />,
+			<input type="text" name="lng" value="{{lng}}" class="S" style="border:0px;" />
+			<input type="button" value="標記地點" />
 		</div>
 		<h4>影響</h4>
 		<div>
@@ -42,4 +68,6 @@
 		<div class="clear"></div>
 	</form>
 </div>
+
+<div id="map_canvas" style="width:400px;height:300px;"></div>
 {% endblock %}
