--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -9,6 +9,9 @@
 {% block head %}{% endblock %}
 </head>
 
-<body>{% block body %}{% endblock %}</body>
+<body>
+    {% block body %}{% endblock %}
+    {% block scripts %}{% endblock %}
+</body>
 
 </html>
