--- a/views/example.html
+++ b/views/example.html
@@ -2,10 +2,139 @@
 
 {% block title %}Examples{% endblock %}
 
+{% block head %}
+<style>
+  .bar {
+    fill: red;
+  }
+
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
+
+  .tick {
+    height: 80px;
+    stroke-dasharray: 1, 2;
+  }
+  .axis text {
+    font-family: 'Arial';
+    font-size: 5px;
+  }
+</style>
+{% endblock %}
+
+{% block scripts %}
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+<script>
+(function() {
+  d3.json('/api/summary/dev_pass', function(JSONData) {
+
+    var dataset = JSONData.slice();
+
+    var margin = {
+      top: 40,
+      right: 20,
+      bottom: 30,
+      left: 40
+    };
+
+    var all_width = 960,
+        all_height = 500,
+        width = all_width - margin.left - margin.right,
+        height = all_height - margin.top - margin.bottom;
+
+    var xRange = d3.scale.ordinal().rangeRoundBands([0, width], 0.1).domain(dataset.map(function(d) {
+      return d.devunit;
+    }));
+
+    var yRange = d3.scale.linear().range([height, 0]).domain([
+      0, d3.max(dataset, function(d) {
+        return d.count;
+      })
+    ]);
+
+    var xAxis = d3.svg.axis()
+    .scale(xRange)
+    .tickSize(5)
+    .tickSubdivide(true);
+    
+    var yAxis = d3.svg.axis()
+    .scale(yRange)
+    .tickSize(5)
+    .orient("left")
+    .tickSubdivide(true);
+
+    var svg = d3.select("#example_dev_pass")
+    .append("svg")
+    .attr("width", all_width)
+    .attr("height", all_height)
+    .append("g")
+    .attr("transform", "translate(40,40)");
+
+    svg.append("g")
+    .attr("class", "x axis")
+    .attr("transform", "translate(0," + height + ")")
+    .call(xAxis)
+    .selectAll(".tick text")
+    .call(wrap, xRange.rangeBand());
+
+    svg.append("g")
+    .attr("class", "y axis")
+    .call(yAxis);
+
+    svg.selectAll(".bar")
+    .data(dataset)
+    .enter()
+    .append("rect")
+    .attr("class", "bar")
+    .attr("x", function(d) {
+      return xRange(d.devunit);
+    })
+    .attr("y", function(d) {
+      return yRange(d.count);
+    })
+    .attr("width", xRange.rangeBand())
+    .attr("height", function(d) {
+      return height - yRange(d.count);
+    });
+  });
+
+  var wrap = function(text, width) {
+    text.each(function() {
+      var text = d3.select(this),
+      words = text.text().split(/(?:)/).reverse(),
+      line = [],
+      lineNumber = 0,
+      y = text.attr("y"),
+      lineHeight = 2,
+      dy = parseFloat(text.attr("dy")),
+      tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
+
+
+      while (word = words.pop()) {
+        line.push(word);
+        tspan.text(line.join(" "));
+        if (tspan.node().getComputedTextLength() > width) {
+          line.pop();
+          tspan.text(line.join(" "));
+          line = [word];
+          tspan = text.append("tspan").attr("x", 0).attr("y", y).attr("dy", ++lineNumber * lineHeight + dy + "em").text(word);
+        }
+      }
+    });
+  };
+}).call(this);
+
+</script>
+
+{% endblock %}
+
 {% block body %}
-<h1>Examples</h1>
-<ul>
-    <li>統計各縣市開發面積</li>
-    <li><a href="/example/dev_pass">統計開發單位審核案件數</a></li>
-</ul>
+  <h1>Examples</h1>
+  <h3>統計各縣市開發面積</h3>
+  <h3>統計開發單位審核案件數</h3>
+  <div id="example_dev_pass"></div>
 {% endblock %}
