--- a/views/example.html
+++ b/views/example.html
@@ -14,12 +14,12 @@
 
 {% block body %}
   <div class="container">
-    <h1 class="page-header"><strong>範例</strong></h1>
+    <h1 class="page-header"><strong>API 範例</strong></h1>
     <div class="panel panel-primary">
       <div class="panel-heading"><h3>統計各縣市開發面積</h3></div>
       <div class="panel-body">
         <div class="alert alert-info">
-          趕工中…
+          <h4>趕工中…</h4>
           <div class="progress">
           <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
             <span class="sr-only">20% Complete</span>
@@ -29,9 +29,16 @@
       </div>
     </div>
     <div class="panel panel-primary">
-      <div class="panel-heading"><h3>統計開發單位審核案件數</h3></div>
+      <div class="panel-heading"><h3>統計開發單位送出審核案件數</h3></div>
+      <div class="panel-body">
+        <div id="example_dev_send"></div>
+      </div>
+  </div>
+      <div class="panel panel-primary">
+      <div class="panel-heading"><h3>統計開發單位送出審核案件通過數</h3></div>
       <div class="panel-body">
         <div id="example_dev_pass"></div>
       </div>
   </div>
+</div>
 {% endblock %}
