--- a/views/example.html
+++ b/views/example.html
@@ -9,6 +9,7 @@
 
 {% block scripts %}
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+  <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
   <script src="/js/example.js"></script>
 {% endblock %}
 
